Playing with Variables

--- a/assets/scss/my-variables.scss
+++ b/assets/scss/my-variables.scss
@@ -1,6 +1,8 @@
 
 $body-background-color: #FAFAFA;
 
+$primary: #0634A4;
+
 $size-1: 10rem;
 
-$family-sans-serif: "Roboto", BlinkMacSystemFont, -apple-system, sans-serif;
+$family-sans-serif: "Montserrat", BlinkMacSystemFont, -apple-system, sans-serif;
