--- a/assets/scss/components/hero.scss
+++ b/assets/scss/components/hero.scss
@@ -1,3 +1,12 @@
 .hero {
-	background-color: yellow;
+	background-color: #FAFAFA;
+}
+
+.line-one {
+	background-color: #d0a233;
+	height: 3px;
+	position: relative;
+	right: 320px;
+	top: 35px;
+	width: 300px;
 }
