--- a/assets/global.scss
+++ b/assets/global.scss
@@ -4,8 +4,38 @@ body, html {
   font-family: 'Montserrat', sans-serif;
 }
 
+body {
+  font-weight: 400;
+  color: rgba(0,0,0,0.7);
+}
+
+p {
+  line-height: 1.8;
+  text-rendering: optimizeLegibility;
+}
+
 img {
   max-width: 100%;
+}
+
+.btn {
+  align-self: center;
+  justify-self: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: .8rem;
+  overflow: hidden;
+  background: none;
+  padding: .95em 1.6em;
+  background-color: #0003d1;
+  transition: background-color .25s ease-in;
+  color: #FAFAFA;
+  transition-property: background-color,color;
+  transition-duration: .25s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0s;
+  border: 0;
+  z-index: 1;
 }
 
 .wrapper-box {
@@ -14,18 +44,16 @@ img {
   grid-template-areas: 
   "iface";
   display: grid;
-  grid-gap: 10px;
 }
 
 .main-content {
   grid-area: iface;
-  width: 90%;
-  height: 90%;
+  width: 90vw;
+  height: 80vh;
   background: #FAFAFA;
-  box-shadow: 15px 15px 40px lightgray;
-  overflow: hidden;
+  box-shadow: 15px 15px 20px lightgray;
   display: grid;
-  grid-gap: 20px;
+  grid-template-columns: 50% auto;
   grid-template-areas:
   "title details"
   "description details"
@@ -34,80 +62,64 @@ img {
 
 .details {
   grid-area: details;
-  min-height: 500px;
-  display: flex;
-  align-items: start;
-  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: grid;
+  grid-template-columns: auto;
 }
 
 .description {
   grid-area: description;
-  min-height: 500px;
+  min-height: 40vh;
 }
 
-.menu-items {
-  display: grid;
-  grid-gap: 10px;
-  padding: 0;
-  list-style: none;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  a {
-    background: yellow;
-    display: block;
-    text-decoration: none;
-    padding: 10px;
-    text-align: center;
-    color: black;
-    text-transform: uppercase;
-    font-size: 20px;
-  }
-}
+// .slideUp {
+//   animation: slideUpAnim 3s forwards;
+//   opacity: 0;
+// }
 
-.slideUp {
-  animation: slideUpAnim 3s forwards;
-  opacity: 0;
-}
+// @keyframes slideUpAnim {
+//   from {
+//     opacity: 0;
+//     transform: translateY(100px);
+//   }
+//   to {
+//     opacity: 100;
+//     transform: translateY(0);
+//   }
+// }
 
-@keyframes slideUpAnim {
-  from {
-    opacity: 0;
-    transform: translateY(100px);
-  }
-  to {
-    opacity: 100;
-    transform: translateY(0);
-  }
-}
+// .fade-enter-active {
+//   animation: slidePageIn 1.5s forwards;
+//   animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
+// }
 
-.fade-enter-active {
-  animation: slidePageIn 1.5s forwards;
-  animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
-}
+// .fade-leave-active {
+//   animation: slidePageDown 1.5s forwards;
+//   animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
+// }
 
-.fade-leave-active {
-  animation: slidePageDown 1.5s forwards;
-  animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
-}
+// @keyframes slidePageIn {
+//   from {
+//     opacity: 0;
+//     transform: translateY(-100%);
+//   }
+//   to {
+//     opacity: 1;
+//     transform: translateY(0%);
+//   }
+// }
 
-@keyframes slidePageIn {
-  from {
-    opacity: 0;
-    transform: translateY(-100%);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0%);
-  }
-}
-
-@keyframes slidePageDown {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-    transform: translateY(0%);
-  }
-}
+// @keyframes slidePageDown {
+//   from {
+//     opacity: 1;
+//   }
+//   to {
+//     opacity: 0;
+//     transform: translateY(0%);
+//   }
+// }
 
 
