--- a/assets/global.scss
+++ b/assets/global.scss
@@ -14,18 +14,30 @@ body {
 
 #app {
   display: grid;
-  grid-template-rows: auto 90vh auto;
+  grid-template-rows: 7vh 90vh 2vh;
   grid-template-areas:
   "navbar"
   "main"
   "footer";
-  border: 2px solid red;
+  
+  
 
   @media screen and (max-width: 800px) {
     display: block;
     }
 
 
+}
+
+.footer {
+  grid-area: footer;
+  list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 p {
