--- a/assets/global.scss
+++ b/assets/global.scss
@@ -15,7 +15,7 @@ body {
 
 #app {
   display: grid;
-  grid-template-rows: 7vh 90vh 2vh;
+  grid-template-rows: 7vh 90vh 3vh;
   grid-template-areas:
   "navbar"
   "main"
@@ -23,9 +23,15 @@ body {
   
   
 
-  @media screen and (max-width: 800px) {
-    display: block;
-    }
+  @media screen and (max-width: 48rem) {
+    grid-gap: 1rem;
+    grid-template-columns: 100%;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+    "navbar"
+    "main"
+    "footer";
+  }
 
 
 }
@@ -112,6 +118,8 @@ img {
   border: 0;
   z-index: 1;
 }
+
+
 
 // .slideUp {
 //   animation: slideUpAnim 3s forwards;
