--- a/assets/global.scss
+++ b/assets/global.scss
@@ -63,18 +63,13 @@ img {
 }
 
 .arrow {
-  position: absolute;
   width: 35px;
 }
 
 .arrow-down {
-  top: 98%;
-  left: 48.5%;
 }
 
 .arrow-up {
-  top: -10px;
-  left: 48.5%;
 }
 
 /**
@@ -128,8 +123,15 @@ img {
 
 
 
+
+
 .slideUp {
   animation: slideUpAnim 3s forwards;
+  opacity: 0;
+}
+
+.slideDown {
+  animation: slideDownAnim 4s forwards;
   opacity: 0;
 }
 
@@ -144,20 +146,31 @@ img {
   }
 }
 
+@keyframes slideDownAnim {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  to {
+    opacity: 100;
+    transform: translateY(0);
+  }
+}
+
 .fade-enter-active {
-  animation: slidePageIn 1.5s forwards;
+  animation: slidePageIn 3s forwards;
   animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
 }
 
 .fade-leave-active {
-  animation: slidePageDown 1.5s forwards;
+  animation: slidePageDown 3s forwards;
   animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
 }
 
 @keyframes slidePageIn {
   from {
     opacity: 0;
-    transform: translateY(-100%);
+    transform: translateY(100%);
   }
   to {
     opacity: 1;
