--- a/assets/global.scss
+++ b/assets/global.scss
@@ -121,6 +121,16 @@ img {
   z-index: 1;
 }
 
+.page-enter-active, .page-leave-active {
+  transition: all .25s ease-out;
+}
+
+.page-enter, .page-leave-active {
+  opacity: 0;
+  transform: scale(0.95);
+  transform-origin: 50% 50%;
+}
+
 
 
 
