Added More Projects

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -110,7 +110,7 @@ img {
   font-size: .8rem;
   background: none;
   padding: .95em 1.6em;
-  background-color: #0003d1;
+  background-color: #2B9cf2;
   transition: background-color .25s ease-in;
   color: #FAFAFA;
   transition-property: background-color,color;
