--- a/assets/global.scss
+++ b/assets/global.scss
@@ -122,80 +122,86 @@ img {
 }
 
 .page-enter-active, .page-leave-active {
-  transition: all .25s ease-out;
+  transition: opacity .5s
 }
-
 .page-enter, .page-leave-active {
-  opacity: 0;
-  transform: scale(0.95);
-  transform-origin: 50% 50%;
+  opacity: 0
 }
 
-
-
-
-
-.slideUp {
-  animation: slideUpAnim 3s forwards;
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .6s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
   opacity: 0;
 }
 
-.slideDown {
-  animation: slideDownAnim 4s forwards;
-  opacity: 0;
-}
 
-@keyframes slideUpAnim {
-  from {
-    opacity: 0;
-    transform: translateY(100px);
-  }
-  to {
-    opacity: 100;
-    transform: translateY(0);
-  }
-}
 
-@keyframes slideDownAnim {
-  from {
-    opacity: 0;
-    transform: translateY(100px);
-  }
-  to {
-    opacity: 100;
-    transform: translateY(0);
-  }
-}
 
-.fade-enter-active {
-  animation: slidePageIn 3s forwards;
-  animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
-}
 
-.fade-leave-active {
-  animation: slidePageDown 3s forwards;
-  animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
-}
 
-@keyframes slidePageIn {
-  from {
-    opacity: 0;
-    transform: translateY(100%);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0%);
-  }
-}
 
-@keyframes slidePageDown {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-    transform: translateY(0%);
-  }
-}
+// .slideUp {
+//   animation: slideUpAnim 3s forwards;
+//   opacity: 0;
+// }
+
+// .slideDown {
+//   animation: slideDownAnim 4s forwards;
+//   opacity: 0;
+// }
+
+// @keyframes slideUpAnim {
+//   from {
+//     opacity: 0;
+//     transform: translateY(100px);
+//   }
+//   to {
+//     opacity: 100;
+//     transform: translateY(0);
+//   }
+// }
+
+// @keyframes slideDownAnim {
+//   from {
+//     opacity: 0;
+//     transform: translateY(100px);
+//   }
+//   to {
+//     opacity: 100;
+//     transform: translateY(0);
+//   }
+// }
+
+// .fade-enter-active {
+//   animation: slidePageIn 3s forwards;
+//   animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
+// }
+
+// .fade-leave-active {
+//   animation: slidePageDown 3s forwards;
+//   animation-timing-function: cubic-bezier(.8, -0.49, .36, 1);
+// }
+
+// @keyframes slidePageIn {
+//   from {
+//     opacity: 0;
+//     transform: translateY(100%);
+//   }
+//   to {
+//     opacity: 1;
+//     transform: translateY(0%);
+//   }
+// }
+
+// @keyframes slidePageDown {
+//   from {
+//     opacity: 1;
+//   }
+//   to {
+//     opacity: 0;
+//     transform: translateY(0%);
+//   }
+// }
 
 
