--- a/assets/global.scss
+++ b/assets/global.scss
@@ -66,11 +66,7 @@ img {
   width: 35px;
 }
 
-.arrow-down {
-}
 
-.arrow-up {
-}
 
 /**
   Single Project Section
@@ -119,6 +115,12 @@ img {
   transition-delay: 0s;
   border: 0;
   z-index: 1;
+
+  &--white {
+    color: #212121;
+    background-color: #fff;
+    border: 1px solid #212121;
+  }
 }
 
 .page-enter-active, .page-leave-active {
